<?xml version="1.0" encoding="utf-8"?><!--
  ~ RAM (c) by Sertan Canpolat
  ~
  ~ RAM is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.
  ~
  ~ You should have received a copy of the license along with this work.
  ~ If not, see <http://creativecommons.org/licenses/by-nc/4.0/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_gap_4"
    tools:context=".UncaughtExceptionHandlerActivity">

    <ImageView
        android:id="@+id/warningImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/error"
        android:src="@drawable/ic_warning"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap_2"
        android:text="@string/an_unknown_error_has_occurred"
        android:textAppearance="?textAppearanceTitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warningImageView" />

    <ScrollView
        android:id="@+id/errorMessageScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_gap_2"
        app:layout_constraintBottom_toTopOf="@id/closeAppButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorTextView">

        <TextView
            android:id="@+id/errorMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceBodyLarge"
            tools:text="@tools:sample/lorem/random" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeAppButton"
        style="?materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reportErrorButton"
        style="?materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
