<?xml version="1.0" encoding="utf-8"?><!--
  ~ RAM (c) by Sertan Canpolat
  ~
  ~ RAM is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.
  ~
  ~ You should have received a copy of the license along with this work.
  ~ If not, see <http://creativecommons.org/licenses/by-nc/4.0/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/buttonPanelFlexLayout"
        style="@style/Widget.RAM.FlexboxLayout.Row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexDirection="row_reverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/exitButton"
            style="@style/Widget.RAM.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit"
            app:srcCompat="@drawable/ic_close" />
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_gap_4"
        android:maxLines="2"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceHeadlineMedium"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPanelFlexLayout"
        tools:text="@tools:sample/lorem[3]" />

    <ImageView
        android:id="@+id/bodyImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/small_gap_4"
        android:layout_marginTop="@dimen/small_gap_4"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/forwardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTextView"
        app:srcCompat="@drawable/full_body"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/answerStateImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/wrong_answer"
        android:minWidth="@dimen/size_min_image_width"
        android:minHeight="@dimen/size_min_image_width"
        android:padding="@dimen/small_gap_2"
        app:layout_constraintBottom_toBottomOf="@id/bodyImageView"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@id/bodyImageView"
        app:layout_constraintStart_toStartOf="@id/bodyImageView"
        app:layout_constraintTop_toTopOf="@id/bodyImageView"
        tools:srcCompat="@drawable/ic_answer_wrong"
        tools:visibility="visible" />

    <dev.sertan.android.ram.core.ui.customview.RamButton
        android:id="@+id/forwardButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_gap_2"
        android:layout_marginVertical="@dimen/small_gap_2"
        app:buttonIcon="@drawable/ic_forward"
        app:buttonText="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <dev.sertan.android.ram.core.ui.customview.RamButton
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:buttonIcon="@drawable/ic_done"
        app:buttonText="@string/finish"
        app:layout_constraintBottom_toBottomOf="@id/forwardButton"
        app:layout_constraintEnd_toEndOf="@id/forwardButton"
        app:layout_constraintStart_toStartOf="@id/forwardButton"
        app:layout_constraintTop_toTopOf="@id/forwardButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
