<?xml version="1.0" encoding="utf-8"?><!--
  ~ RAM (c) by Sertan Canpolat
  ~
  ~ RAM is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.
  ~
  ~ You should have received a copy of the license along with this work.
  ~ If not, see <http://creativecommons.org/licenses/by-nc/4.0/>.
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/materialCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_gap_2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_gap_2">

        <ImageView
            android:id="@+id/materialImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/material_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/wrongImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_question_answer_state"
            android:contentDescription="@string/wrong_answer"
            app:srcCompat="@drawable/ic_close"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/materialImageView"
            app:layout_constraintEnd_toEndOf="@id/materialImageView"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="@id/materialImageView"
            app:layout_constraintTop_toTopOf="@id/materialImageView"
            app:layout_constraintWidth_percent="0.3"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/correctImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_question_answer_state"
            android:contentDescription="@string/correct_answer"
            app:srcCompat="@drawable/ic_done"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/materialImageView"
            app:layout_constraintEnd_toEndOf="@id/materialImageView"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="@id/materialImageView"
            app:layout_constraintTop_toTopOf="@id/materialImageView"
            app:layout_constraintWidth_percent="0.3"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
