<?xml version="1.0" encoding="utf-8"?><!--
  ~ RAM (c) by Sertan Canpolat
  ~
  ~ RAM is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.
  ~
  ~ You should have received a copy of the license along with this work.
  ~ If not, see <http://creativecommons.org/licenses/by-nc/4.0/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gapfilling.GapFillingFragment">

    <FrameLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_panel"
        android:padding="@dimen/small_gap_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/exitButton"
            style="@style/Widget.RAM.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/exit"
            app:srcCompat="@drawable/ic_close"
            app:tint="@android:color/holo_red_dark" />
    </FrameLayout>

    <TextView
        android:id="@+id/contentTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_gap_2"
        android:layout_marginTop="@dimen/small_gap_2"
        android:gravity="center"
        android:maxLines="2"
        android:textAppearance="?textAppearanceBodyLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/contentMaterialLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPanel"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@tools:sample/lorem[200]" />

    <FrameLayout
        android:id="@+id/contentMaterialLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/small_gap_2"
        android:background="@drawable/bg_card_material"
        app:layout_constraintBottom_toTopOf="@id/attributionTextView"
        app:layout_constraintDimensionRatio="1.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentTextView">

        <ImageView
            android:id="@+id/mediaImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_gap_4"
            android:adjustViewBounds="true"
            android:contentDescription="@string/material_image"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />
    </FrameLayout>

    <TextView
        android:id="@+id/attributionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_gap_2"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/materialsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentMaterialLayout"
        tools:text="@tools:sample/lorem/random" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/materialsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_gap_1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attributionTextView"
        app:spanCount="2"
        tools:itemCount="6"
        tools:listitem="@layout/item_question_material" />

    <dev.sertan.android.ram.core.ui.customview.RamButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_gap_2"
        android:layout_marginVertical="@dimen/small_gap_4"
        app:buttonIcon="@drawable/ic_forward"
        app:buttonText="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <dev.sertan.android.ram.core.ui.customview.RamButton
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:buttonIcon="@drawable/ic_done"
        app:buttonText="@string/finish"
        app:layout_constraintBottom_toBottomOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="@id/nextButton"
        app:layout_constraintStart_toStartOf="@id/nextButton"
        app:layout_constraintTop_toTopOf="@id/nextButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/contentGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="
            contentMaterialLayout,
            materialsRecyclerView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/emptyListMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_list_message"
        android:textAppearance="?textAppearanceDisplayMedium"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPanel"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/answerStateImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/wrong_answer"
        android:minWidth="@dimen/size_min_image_width"
        android:minHeight="@dimen/size_min_image_width"
        android:padding="@dimen/small_gap_2"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPanel"
        tools:srcCompat="@drawable/ic_answer_wrong"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
