<?xml version="1.0" encoding="utf-8"?><!--
  ~ RAM (c) by Sertan Canpolat
  ~
  ~ RAM is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License.
  ~
  ~ You should have received a copy of the license along with this work.
  ~ If not, see <http://creativecommons.org/licenses/by-nc/4.0/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.voiceimitation.VoiceImitationFragment">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/buttonPanelFlexLayout"
        style="@style/Widget.RAM.FlexboxLayout.Row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexDirection="row_reverse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/exitButton"
            style="@style/Widget.RAM.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit"
            app:srcCompat="@drawable/ic_close" />
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_gap_4"
        android:maxLines="2"
        android:text="@string/voice_imitation_description"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceHeadlineMedium"
        android:textColor="@android:color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/currentSoundTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPanelFlexLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/currentSoundTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_gap_4"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceHeadlineLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/micButton"
        app:layout_constraintEnd_toEndOf="@id/descriptionTextView"
        app:layout_constraintStart_toStartOf="@id/descriptionTextView"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        tools:text="Tak, tak, tak" />

    <ImageButton
        android:id="@+id/micButton"
        style="@style/Widget.RAM.ImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/small_gap_4"
        android:adjustViewBounds="true"
        android:padding="@dimen/small_gap_2"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/forwardButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentSoundTextView"
        app:layout_constraintWidth_percent="0.2"
        app:srcCompat="@drawable/ic_mic"
        tools:ignore="ContentDescription"
        tools:visibility="visible" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/micButton"
        app:layout_constraintEnd_toEndOf="@id/micButton"
        app:layout_constraintStart_toStartOf="@id/micButton"
        app:layout_constraintTop_toTopOf="@id/micButton"
        tools:visibility="invisible" />

    <dev.sertan.android.ram.core.ui.customview.RamButton
        android:id="@+id/forwardButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_gap_2"
        app:buttonIcon="@drawable/ic_forward"
        app:buttonText="@string/next"
        app:layout_constraintStart_toStartOf="@id/currentSoundTextView"
        app:layout_constraintEnd_toEndOf="@id/currentSoundTextView"
        app:layout_constraintBottom_toTopOf="@id/backButton" />

    <dev.sertan.android.ram.core.ui.customview.RamButton
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:buttonIcon="@drawable/ic_done"
        app:buttonText="@string/finish"
        app:layout_constraintBottom_toBottomOf="@id/forwardButton"
        app:layout_constraintEnd_toEndOf="@id/forwardButton"
        app:layout_constraintStart_toStartOf="@id/forwardButton"
        app:layout_constraintTop_toTopOf="@id/forwardButton" />

    <dev.sertan.android.ram.core.ui.customview.RamButton
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/small_gap_2"
        app:buttonIcon="@drawable/ic_back"
        app:buttonText="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/forwardButton"
        app:layout_constraintStart_toStartOf="@id/forwardButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/contentGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="descriptionTextView,currentSoundTextView,micButton" />

    <TextView
        android:id="@+id/emptyListMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_list_message"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceHeadlineMedium"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
